[Math Library] Fixed matrix so it compiles and added start of a unit test suite, and an example of calling it from a different directory in math_library_example

--- a/math_library/BUILD
+++ b/math_library/BUILD
@@ -2,7 +2,17 @@ load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
 
 cc_library (
     name = "math_library",
-    srcs = glob(["*.cc"]),
-    hdrs = glob(["*.h"]),
+    srcs = ["matrix.cpp"],
+    hdrs = ["matrix.h"],
     visibility = ["//visibility:public"],
+)
+
+cc_test(
+  name = "matrix_test",
+  size = "small",
+  srcs = ["matrix_test.cpp"],
+  deps = [
+            "@com_google_googletest//:gtest_main",
+            "math_library"
+        ],
 )
