--- a/.github/workflows/c-bazel-ci.yml
+++ b/.github/workflows/c-bazel-ci.yml
@@ -17,4 +17,4 @@ jobs:
     - name: Build Everything
       run: bazel build //math_library
     - name: Test Everything
-    - run: bazel test --cxxopt=-std=c++14 --test_output=all //...
+      run: bazel test --cxxopt=-std=c++14 --test_output=all //...
