--- a/pricers/BUILD
+++ b/pricers/BUILD
@@ -1,9 +1,9 @@
-load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
+load("@rules_cc//cc:defs.bzl", "cc_library")
 
 cc_library (
     name = "pricers",
     srcs = glob(["*.cc"]),
-    hdrs = glob(["*.h"]),
+    hdrs = glob(["*.h", "*.hpp"]),
     visibility = ["//visibility:public"],
     deps = [
         "//assets:assets",
